--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,20 @@
   <url>http://tipitaka.org</url>
   <dependencies>
     <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+    </dependency>
+    <dependency>
       <groupId>org.tipitaka</groupId>
       <artifactId>tipitaka-search</artifactId>
       <version>1.0-SNAPSHOT</version>
+      <exclusions>
+	<exclusion>
+	  <groupId>org.apache.solr</groupId>
+	  <artifactId>solr</artifactId>
+	</exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -41,9 +52,26 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
+	<version>3.1</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+	<version>9.3.8.v20160314</version>
+        <configuration>
+	  <webApp>
+	    <resourceBases>
+	      <resourceBase>../tipitaka-search/archive</resourceBase>
+	      <resourceBase>archive/data</resourceBase>
+	      <resourceBase>archive/static</resourceBase>
+	    </resourceBases>
+	  </webApp>
+          <scanIntervalSeconds>10</scanIntervalSeconds>
         </configuration>
       </plugin>
     </plugins>
