--- a/pom.xml
+++ b/pom.xml
@@ -32,28 +32,15 @@
   
   <dependencies>
     <dependency>
+      <groupId>xpp3</groupId>
+      <artifactId>xpp3</artifactId>
+      <version>1.1.4c</version>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.tipitaka</groupId>
-      <artifactId>tipitaka-search</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <exclusions>
-	<exclusion>
-	  <groupId>org.apache.solr</groupId>
-	  <artifactId>solr</artifactId>
-	</exclusion>
-	<exclusion>
-	  <groupId>org.apache.solr</groupId>
-	  <artifactId>solr-core</artifactId>
-	</exclusion>
-	<exclusion>
-	  <groupId>org.apache.zookeeper</groupId>
-	  <artifactId>zookeeper</artifactId>
-	</exclusion>
-      </exclusions>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
