--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <packaging>war</packaging>
   <name>Tipitaka Archive</name>
   <url>http://tipitaka.de</url>
-  
+
   <licenses>
     <license>
       <name>AGPL</name>
@@ -19,7 +19,7 @@
       <email>m.kristian@web.de</email>
     </developer>
   </developers>
-  
+
   <scm>
     <connection>scm:git:git://github.com/tipitaka-org/tipitaka-archive.git</connection>
     <developerConnection>scm:git:git@github.com:tipitaka-org/tipitaka-archive.git</developerConnection>
@@ -29,7 +29,7 @@
   <properties>
     <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
   </properties>
-  
+
   <dependencies>
     <dependency>
       <groupId>xpp3</groupId>
@@ -74,7 +74,7 @@
         <artifactId>buildnumber-maven-plugin</artifactId>
         <version>1.4</version>
         <configuration>
-	  <shortRevisionLength>6</shortRevisionLength>
+          <shortRevisionLength>6</shortRevisionLength>
         </configuration>
         <executions>
           <execution>
@@ -85,29 +85,29 @@
           </execution>
         </executions>
       </plugin>
-      
+
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-	<version>3.1</version>
+        <version>3.1</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
       </plugin>
-      
+
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-	<version>9.3.8.v20160314</version>
+        <version>9.3.8.v20160314</version>
         <configuration>
-	  <webApp>
-	    <resourceBases>
-	      <resourceBase>archive/data</resourceBase>
-	      <resourceBase>archive/static</resourceBase>
-	      <resourceBase>archive</resourceBase>
-	      <resourceBase>../tipitaka-search/archive</resourceBase>
-	    </resourceBases>
-	  </webApp>
+          <webApp>
+            <resourceBases>
+              <resourceBase>archive/data</resourceBase>
+              <resourceBase>archive/static</resourceBase>
+              <resourceBase>archive</resourceBase>
+              <resourceBase>../tipitaka-search/archive</resourceBase>
+            </resourceBases>
+          </webApp>
           <scanIntervalSeconds>10</scanIntervalSeconds>
         </configuration>
       </plugin>
@@ -115,18 +115,46 @@
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <configuration>
-	  <webResources>
-	    <webResource>
-	      <directory>${project.basedir}/archive</directory>
-	      <includes>
-		<include>*.script</include>
-		<include>directory.map</include>
-	      </includes>
-	      <targetPath>WEB-INF</targetPath>
-	    </webResource>
-	  </webResources>
+          <webResources>
+            <webResource>
+              <directory>${project.basedir}/archive</directory>
+              <includes>
+                <include>*.script</include>
+                <include>directory.map</include>
+              </includes>
+              <targetPath>WEB-INF</targetPath>
+            </webResource>
+          </webResources>
         </configuration>
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>api</id>
+      <build>
+        <defaultGoal>compile</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.1</version>
+            <configuration>
+              <mainClass>org.tipitaka.archive.Main</mainClass>
+              <arguments>
+                <argument>API</argument>
+              </arguments>
+            </configuration>
+            <executions>
+              <execution>
+                <phase>compile</phase>
+                <goals><goal>java</goal></goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
